[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Dmitrii Kim <kim.dima.93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^75.1.0"
pybit = "^5.8.0"
celery = "^5.4.0"
loguru = "^0.7.2"
path = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
